// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile 3 mosItemReplace 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosItemReplace>
    <roID>roX</roID>
    <storyID>storyY</storyID>
    <item>
      <itemID>abc</itemID>
      <objID>Object0</objID>
      <mosID>our.mos.id</mosID>
      <itemSlug>my cool Object</itemSlug>
      <objDur>250</objDur>
      <objTB>25</objTB>
    </item>
  </mosItemReplace>
</mos>"
`;

exports[`Profile 3 mosItemReplace 2`] = `
{
  "ID": MosString128 {
    "_str": "96857485",
    "strict": true,
  },
  "Status": MosString128 {
    "_str": "Unknown object M000133",
    "strict": true,
  },
  "Stories": [
    {
      "ID": MosString128 {
        "_str": "5983A501:0049B924:8390EF2B",
        "strict": true,
      },
      "Items": [],
    },
    {
      "ID": MosString128 {
        "_str": "3854737F:0003A34D:983A0B28",
        "strict": true,
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "ncsID": undefined,
  "port": "upper",
}
`;

exports[`Profile 3 mosObjCreate 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosObjCreate>
    <objID>abc</objID>
    <objSlug>my cool Object</objSlug>
    <objType>VIDEO</objType>
    <objTB>25</objTB>
    <objRev/>
    <objDur>250</objDur>
    <status/>
    <objAir/>
    <createdBy/>
    <created/>
  </mosObjCreate>
</mos>"
`;

exports[`Profile 3 mosObjCreate 2`] = `
{
  "Description": MosString128 {
    "_str": "",
    "strict": true,
  },
  "ID": MosString128 {
    "_str": "M000123",
    "strict": true,
  },
  "Revision": 1,
  "Status": "ACK",
}
`;

exports[`Profile 3 mosReqSearchableSchema 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqSearchableSchema username="myUsername"/>
</mos>"
`;

exports[`Profile 3 mosReqSearchableSchema 2`] = `
{
  "mosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
  "text": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
  "username": "myUsername",
}
`;

exports[`Profile 3 mosRequestObjectList 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObjList username="jbob">
    <username>jbob</username>
    <queryID>A392938329kdakd2039300d0s9l3l9d0bzAQ</queryID>
    <listReturnStart>1</listReturnStart>
    <listReturnEnd>20</listReturnEnd>
    <generalSearch>boats</generalSearch>
    <mosSchema/>
  </mosReqObjList>
</mos>"
`;

exports[`Profile 3 mosRequestObjectList 2`] = `
{
  "list": [
    {
      "AirStatus": "READY",
      "Changed": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "ChangedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "M000121",
        "strict": true,
      },
      "MosAbstract": {
        "elements": [
          {
            "$name": "b",
            "$type": "text",
            "text": "Hotel Fire",
          },
          {
            "$name": "em",
            "$type": "text",
            "text": "vo",
          },
        ],
      },
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [
        {
          "Description": "MPEG2                            Video",
          "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
          "Type": "PATH",
        },
        {
          "Description": "WM9 750Kbps",
          "Target": "http://server/proxy/clipe.wmv",
          "Type": "PROXY PATH",
        },
        {
          "Description": "MOS Object",
          "Target": "http://server/proxy/clipe.xml",
          "Type": "METADATA PATH",
        },
      ],
      "Revision": 1,
      "Slug": MosString128 {
        "_str": "Hotel Fire",
        "strict": true,
      },
      "Status": "NEW",
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
    {
      "AirStatus": "READY",
      "Changed": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "ChangedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "M000122",
        "strict": true,
      },
      "MosAbstract": {
        "elements": [
          {
            "$name": "b",
            "$type": "text",
            "text": "Hotel Fire",
          },
          {
            "$name": "em",
            "$type": "text",
            "text": "vo",
          },
        ],
      },
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [
        {
          "Description": "MPEG2 Video",
          "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
          "Type": "PATH",
        },
        {
          "Description": "WM9 750Kbps",
          "Target": "http://server/proxy/clipe.wmv",
          "Type": "PROXY PATH",
        },
        {
          "Description": "MOS Object",
          "Target": "http://server/proxy/clipe.xml",
          "Type": "METADATA PATH",
        },
      ],
      "Revision": 1,
      "Slug": MosString128 {
        "_str": "Another Hotel Fire",
        "strict": true,
      },
      "Status": "NEW",
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
    {
      "AirStatus": "READY",
      "Changed": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "ChangedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 1998-10-31T23:39:12.000Z,
        "_timezone": "Z",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "Z",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "M000123",
        "strict": true,
      },
      "MosAbstract": {
        "elements": [
          {
            "$name": "b",
            "$type": "text",
            "text": "Hotel Fire",
          },
          {
            "$name": "em",
            "$type": "text",
            "text": "vo",
          },
        ],
      },
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [
        {
          "Description": "MPEG2 Video",
          "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
          "Type": "PATH",
        },
        {
          "Description": "WM9 750Kbps",
          "Target": "http://server/proxy/clipe.wmv",
          "Type": "PROXY PATH",
        },
        {
          "Description": "MOS Object",
          "Target": "http://server/proxy/clipe.xml",
          "Type": "METADATA PATH",
        },
      ],
      "Revision": 1,
      "Slug": MosString128 {
        "_str": "Yet Another Hotel Fire",
        "strict": true,
      },
      "Status": "NEW",
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
  ],
  "listReturnEnd": 20,
  "listReturnStart": 1,
  "listReturnTotal": 128,
  "queryID": "A392938329kdakd2039300d0s9l3l9d0bzAQ",
  "username": "jbob",
}
`;

exports[`Profile 3 onMosItemReplace 1`] = `
[
  [
    undefined,
    undefined,
    {
      "EditorialDuration": 815,
      "EditorialStart": 0,
      "ID": MosString128 {
        "_str": "30848",
        "strict": true,
      },
      "MOSID": "testmos.enps.com",
      "MacroIn": MosString128 {
        "_str": "c01/l04/dve07",
        "strict": true,
      },
      "MacroOut": MosString128 {
        "_str": "r00",
        "strict": true,
      },
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "efxTime": 15,
            "fade": 17,
            "key": 110,
            "trigger": 837,
          },
          "MosSchema": "HTTP://VENDOR/MOS/supportedSchemas/vvend280",
          "MosScope": "PLAYLIST",
        },
      ],
      "ObjectID": MosString128 {
        "_str": "M000627",
        "strict": true,
      },
      "Paths": [
        {
          "Description": "MPEG2 Video",
          "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
          "Type": "PATH",
        },
        {
          "Description": "WM9 750Kbps",
          "Target": "http://server/proxy/clipe.wmv",
          "Type": "PROXY PATH",
        },
        {
          "Description": "MOS Object",
          "Target": "http://server/proxy/clipe.xml",
          "Type": "METADATA PATH",
        },
      ],
      "UserTimingDuration": 310,
    },
  ],
]
`;

exports[`Profile 3 onMosItemReplace: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 3 onMosObjCreate 1`] = `
[
  [
    {
      "AirStatus": undefined,
      "Changed": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "ChangedBy": MosString128 {
        "_str": "undefined",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are
				 visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park
				 Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "undefined",
        "strict": true,
      },
      "MosAbstract": undefined,
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://NCSA4.com/mos/supported_schemas/NCSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [],
      "Revision": undefined,
      "Slug": MosString128 {
        "_str": "Hotel Fire",
        "strict": true,
      },
      "Status": undefined,
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
  ],
]
`;

exports[`Profile 3 onMosObjCreate: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1633</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1633</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos>"
`;

exports[`Profile 3 onMosReqObjectActionDelete 1`] = `
[
  [
    "1EFA3009233F8329C1",
  ],
]
`;

exports[`Profile 3 onMosReqObjectActionDelete: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos>"
`;

exports[`Profile 3 onMosReqObjectActionNew 1`] = `
[
  [
    {
      "AirStatus": undefined,
      "Changed": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "ChangedBy": MosString128 {
        "_str": "undefined",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are
				visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park
				Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "undefined",
        "strict": true,
      },
      "MosAbstract": undefined,
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://NCSA4.com/mos/supported_schemas/NCSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [],
      "Revision": undefined,
      "Slug": MosString128 {
        "_str": "Hotel Fire",
        "strict": true,
      },
      "Status": undefined,
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
  ],
]
`;

exports[`Profile 3 onMosReqObjectActionNew: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos>"
`;

exports[`Profile 3 onMosReqObjectActionUpdate 1`] = `
[
  [
    "1EFA3009233F8329C1",
    {
      "AirStatus": undefined,
      "Changed": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "ChangedBy": MosString128 {
        "_str": "undefined",
        "strict": true,
      },
      "Created": MosTime {
        "_time": 2021-01-01T00:00:00.000Z,
        "_timezone": "",
        "_timezoneDeclaration": "",
        "_timezoneZuluIndicator": "",
      },
      "CreatedBy": MosString128 {
        "_str": "Chris",
        "strict": true,
      },
      "Description": {
        "elements": [
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$type": "text",
                "text": "Exterior footage of",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "Baley Park Hotel",
              },
              {
                "$type": "text",
                "text": "on fire with natural sound. Trucks are
			visible for the first portion of the clip.",
              },
              {
                "$name": "em",
                "$type": "text",
                "text": "CG locator at 0:04 and duration 0:05, Baley Park
			Hotel.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "element",
            "elements": [
              {
                "$name": "tab",
                "$type": "element",
              },
              {
                "$type": "text",
                "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
              },
            ],
          },
          {
            "$name": "p",
            "$type": "text",
            "em": "Clip has been doubled for pad on voice over.",
            "text": "Clip has been doubled for pad on voice over.",
          },
        ],
      },
      "Duration": 1800,
      "Group": "Show 7",
      "ID": MosString128 {
        "_str": "1EFA3009233F8329C1",
        "strict": true,
      },
      "MosAbstract": undefined,
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Approved": 0,
            "Creator": "SHOLMES",
            "ModBy": "LJOHNSTON",
            "ModTime": 20010308142001,
            "Owner": "SHOLMES",
            "TextTime": 278,
            "mediaTime": 0,
            "text": 0,
          },
          "MosSchema": "http://NCSA4.com/mos/supported_schemas/NCSAXML2.08",
          "MosScope": "STORY",
        },
      ],
      "Paths": [],
      "Revision": undefined,
      "Slug": MosString128 {
        "_str": "Hotel Fire",
        "strict": true,
      },
      "Status": undefined,
      "TimeBase": 59.94,
      "Type": "VIDEO",
    },
  ],
]
`;

exports[`Profile 3 onMosReqObjectActionUpdate: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <mosAck>
    <objID>runningOrderId</objID>
    <objRev>1</objRev>
    <status>ACK</status>
    <statusDescription/>
  </mosAck>
</mos>"
`;

exports[`Profile 3 onMosReqObjectList 1`] = `
[
  [
    {
      "generalSearch": "man bites dog",
      "listReturnEnd": null,
      "listReturnStart": 1,
      "mosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
      "queryID": "123439392039393ade0393zdkdls",
      "searchGroups": [
        {
          "searchFields": [
            {
              "XPath": "/Presenter [. ='Bob']",
              "sortByOrder": 1,
            },
            {
              "XPath": "/Slug [.='Dog Abuse']",
            },
            {
              "XPath": "/Video/Length [.>60 AND <120]",
              "sortByOrder": 2,
              "sortType": "DESCENDING",
            },
            {
              "XPath": "Producer [.!='Susan']",
              "sortByOrder": 3,
            },
          ],
        },
        {
          "searchFields": [
            {
              "XPath": "/Presenter [. ='Jennifer']",
              "sortByOrder": 1,
            },
            {
              "XPath": "/Slug [.='Big Mice in City']",
            },
            {
              "XPath": "/Video/Length [.>60 AND <120]",
              "sortByOrder": 2,
              "sortType": "DESCENDING",
            },
            {
              "XPath": "Producer [.!='Susan']",
              "sortByOrder": 3,
            },
          ],
        },
      ],
      "username": "jbob",
    },
  ],
]
`;

exports[`Profile 3 onMosReqObjectList: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <mosObjList username="jbob">
    <queryID>A392938329kdakd2039300d0s9l3l9d0bzAQ</queryID>
    <listReturnStart>0</listReturnStart>
    <listReturnEnd>0</listReturnEnd>
    <listReturnTotal>0</listReturnTotal>
  </mosObjList>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <mosObjList username="jbob">
    <queryID>A392938329kdakd2039300d0s9l3l9d0bzAQ</queryID>
    <listReturnStart>0</listReturnStart>
    <listReturnEnd>0</listReturnEnd>
    <listReturnTotal>0</listReturnTotal>
  </mosObjList>
</mos>"
`;

exports[`Profile 3 onMosReqSearchableSchema 1`] = `
[
  [
    "jbob",
  ],
]
`;

exports[`Profile 3 onMosReqSearchableSchema: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <mosListSearchableSchema username="jbob">
    <mosSchema>http://example.com/mosSearchableSchema</mosSchema>
  </mosListSearchableSchema>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <mosListSearchableSchema username="jbob">
    <mosSchema>http://example.com/mosSearchableSchema</mosSchema>
  </mosListSearchableSchema>
</mos>"
`;

exports[`Profile 3 sendMosReqObjectActionNew 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObjAction operation="NEW">
    <objSlug>abc123</objSlug>
    <objType>VIDEO</objType>
    <objTB>25</objTB>
    <objRev/>
    <objDur>500</objDur>
    <status/>
    <objAir/>
    <createdBy/>
    <created/>
  </mosReqObjAction>
</mos>"
`;

exports[`Profile 3 sendMosReqObjectActionUpdateDelete 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObjAction operation="DELETE" objID="OBJID1234"/>
</mos>"
`;

exports[`Profile 3 sendMosReqObjectActionUpdateUpdate 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObjAction operation="UPDATE" objID="OBJID1234">
    <objSlug>abc123</objSlug>
    <objType>VIDEO</objType>
    <objTB>25</objTB>
    <objRev/>
    <objDur>500</objDur>
    <status/>
    <objAir/>
    <createdBy/>
    <created/>
  </mosReqObjAction>
</mos>"
`;

exports[`Profile 3 sendRunningOrderStory 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roStorySend>
    <storyID>5983A501:0049B924:8390EF1F</storyID>
    <roID>96857485</roID>
    <storyBody>
      <storyItem>
        <itemID>ID</itemID>
        <objID>ObjectID</objID>
        <mosID>MOSID</mosID>
        <objPaths>
          <objPath techDescription="The one true path">/asdfasdf/asdf/asdf/qwerty</objPath>
        </objPaths>
        <mosExternalMetadata>
          <mosSchema>schema://mock</mosSchema>
          <mosPayload>
            <attr0>1</attr0>
            <attr1>
              <inner>two</inner>
            </attr1>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
        <itemSlug>Slug</itemSlug>
        <itemEdStart>1</itemEdStart>
        <itemEdDur>2</itemEdDur>
        <itemUserTimingDur>5</itemUserTimingDur>
        <itemTrigger>Trigger</itemTrigger>
        <mosAbstract>mosAbstract</mosAbstract>
        <objSlug>ObjectSlug</objSlug>
        <itemChannel>Channel</itemChannel>
        <objDur>3</objDur>
        <objTB>4</objTB>
        <macroIn>MacroIn</macroIn>
        <macroOut>MacroOut</macroOut>
        <mosObj>
          <objID>ID</objID>
          <objSlug>Slug</objSlug>
          <mosAbstract>MosAbstract</mosAbstract>
          <objGroup>Group</objGroup>
          <objType>OTHER</objType>
          <objTB>25</objTB>
          <objRev>123</objRev>
          <objDur>510</objDur>
          <status>READY</status>
          <objAir>READY</objAir>
          <objPaths>
            <objPath techDescription="The one true path">/asdfasdf/asdf/asdf/qwerty/mosobject</objPath>
          </objPaths>
          <createdBy>CreatedBy</createdBy>
          <created>1970-01-01T00:02:03,456</created>
          <changedBy>ChangedBy</changedBy>
          <changed>1970-01-01T00:02:03,457</changed>
          <description>this is a description</description>
          <mosExternalMetadata>
            <mosSchema>schema://mock</mosSchema>
            <mosPayload>
              <attr0>1</attr0>
              <attr1>
                <inner>two</inner>
              </attr1>
            </mosPayload>
            <mosScope>STORY</mosScope>
          </mosExternalMetadata>
        </mosObj>
      </storyItem>
    </storyBody>
  </roStorySend>
</mos>"
`;
